<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mjnichol - Killer Kounter</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Killer Counter!!!</string>
    <string name="view_counters">View the Counters</string>
    <string name="view_stats">Check Statistics</string>
    <string name="edit_message">Enter Counter Name</string>
    <string name="make_counter">Create Counter</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_manipulate_counters">Counters!</string>
    <string name="title_activity_view_statistics">Counter Statistics</string>
    <string name="title_activity_display_counters">DisplayCounters</string>
    <string name="create_counter">Create the Counter!</string>
    <string name="toggle_reset">Click on Counters to Reset</string>
    <string name="toggle_rename">Click on Counters to Enter New Name</string>
    <string name="heading_dismissable_list_view">Counters</string>
    <string name="time_list_view">Time Stats</string>
    <string name="title_activity_display_statistics">DisplayStatisticsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_time">DisplayTimeActivity</string>

</resources>
