<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" 
        android:gravity="center"
        android:text="@string/app_title" 
        android:textSize="32sp" />
	
	<EditText android:id="@+id/edit_message"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/edit_message" />
	
	<Button android:id="@+id/create_counter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_counter" 
        android:layout_gravity="center" 
        android:gravity="center"
    	android:onClick="createCounter" />
	
	<Button android:id="@+id/view_counts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_counters"
        android:layout_gravity="center" 
        android:gravity="center"
    	android:onClick="seeCounters" />
	
	<Button android:id="@+id/view_statistics"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_stats" 
        android:layout_gravity="center" 
        android:gravity="center"
    	android:onClick="seeStats" />

</LinearLayout>
