<!--  

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayCountersActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

</RelativeLayout>
-->


<!--
  Copyright 2013 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayCountersActivity" >

    <!--  
    <LinearLayout android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            android:text="@string/heading_dismissable_views" />

        <ScrollView android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">
            <LinearLayout android:id="@+id/dismissable_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </LinearLayout>
-->
    <LinearLayout android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:orientation="vertical">

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            android:text="@string/heading_dismissable_list_view" />

        <ListView
            android:id="@android:id/list"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
        
        <Button android:id="@+id/toggle_reset"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/toggle_reset"
        	android:layout_gravity="center" 
        	android:gravity="center"
    		android:onClick="toggleReset" />
        
		<Button android:id="@+id/toggle_rename"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/toggle_rename"
        	android:layout_gravity="center" 
        	android:gravity="center"
    		android:onClick="toggleRename" />
		
		<EditText android:id="@+id/edit_name"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:hint="@string/edit_message"/>
        
    </LinearLayout>
    
</LinearLayout>
